fixed nav bar scaling on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@ header div nav a {
 }
 @media (max-width: 500px) {
   header div nav a {
-    padding: 0px 30px;
+    padding: 0px 25px;
   }
 }
 @media (max-width: 500px) {
