--- a/less/navigation.less
+++ b/less/navigation.less
@@ -28,8 +28,8 @@ header{
                 padding: 0px 10px;
                 font-size: 1.25rem;
                 @media @mobile{
-                    padding:0px 30px;;
-                  }
+                    padding:0px 25px;;
+                }
             }
         }
         h1{
